name:                type-safe-sql
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Adam Gundry
maintainer:          adam@well-typed.com
copyright:           Copyright (c) 2016, Adam Gundry
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     TypeSafeSQL
  build-depends:       base >=4.9 && <5,
                       bytestring >= 0.10.8.1 && < 0.11,
                       postgresql-simple >= 0.5.2.1 && <0.6
  default-language:    Haskell2010
